data/derived/sp14/progs/unify/prog0177.ml.out
Characters 91-92:
  | h::m::t -> (mulByDigit m::t) @ ( (h*i)/10 ) + (m*i) mod 10 :: ( (h*i) mod 10 ) :: [];;
                              ^
Error: This expression has type 'a list
       but an expression was expected of type ('a list -> 'b list) list
       The type variable 'a occurs inside 'a list -> 'b list
